@@ -49,7 +49,6 @@ import xyz.zedler.patrick.grocy.scanner.EmbeddedFragmentScanner.BarcodeListener;
 import xyz.zedler.patrick.grocy.scanner.EmbeddedFragmentScannerBundle;
 import xyz.zedler.patrick.grocy.util.Constants;
 import xyz.zedler.patrick.grocy.util.Constants.ARGUMENT;
-import xyz.zedler.patrick.grocy.util.Constants.PREF;
 import xyz.zedler.patrick.grocy.util.NumUtil;
 import xyz.zedler.patrick.grocy.util.ViewUtil;
 import xyz.zedler.patrick.grocy.viewmodel.ConsumeViewModel;
@@ -174,21 +173,6 @@ public class ConsumeFragment extends BaseFragment implements BarcodeListener {
     viewModel.getFormData().getQuantityUnitStockLive().observe(getViewLifecycleOwner(), i -> {
     });
 
-    viewModel.getFormData().getProductDetailsLive().observe(
-        getViewLifecycleOwner(),
-        productDetails -> {
-          MenuItem menuItem = activity.getBottomMenu().findItem(R.id.action_open);
-            if (productDetails != null && productDetails.getProduct()
-                .getEnableTareWeightHandlingBoolean() || menuItem == null
-                || !viewModel.isFeatureEnabled(PREF.FEATURE_STOCK_OPENED_TRACKING)) {
-                return;
-            }
-          menuItem.setVisible(productDetails != null);
-        }
-    );
-
-    //hideDisabledFeatures();
-
     if (savedInstanceState == null) {
         viewModel.loadFromDatabase(true);
     }
@@ -218,7 +202,7 @@ public class ConsumeFragment extends BaseFragment implements BarcodeListener {
           } else if (!viewModel.getFormData().isProductNameValid()) {
             clearFocusAndCheckProductInput();
           } else {
-            viewModel.consumeProduct(false);
+            viewModel.consumeProduct();
           }
         }
     );
@@ -369,7 +353,7 @@ public class ConsumeFragment extends BaseFragment implements BarcodeListener {
 
   @Override
   public void startTransaction() {
-    viewModel.consumeProduct(false);
+    viewModel.consumeProduct();
   }
 
   @Override
@@ -380,12 +364,6 @@ public class ConsumeFragment extends BaseFragment implements BarcodeListener {
   @Override
   public void onBottomSheetDismissed() {
     clearInputFocusOrFocusNextInvalidView();
-  }
-
-  private void hideDisabledFeatures() {
-        /*if(!viewModel.isFeatureEnabled(Constants.PREF.FEATURE_STOCK_LOCATION_TRACKING)) {
-            binding.linearPurchaseLocation.setVisibility(View.GONE);
-        }*/
   }
 
   private boolean onMenuItemClick(MenuItem item) {
@@ -405,13 +383,6 @@ public class ConsumeFragment extends BaseFragment implements BarcodeListener {
       clearInputFocus();
       viewModel.getFormData().clearForm();
       embeddedFragmentScanner.startScannerIfVisible();
-      return true;
-    } else if (item.getItemId() == R.id.action_open) {
-      if (viewModel.isQuickModeEnabled()) {
-        focusNextInvalidView();
-      } else {
-        viewModel.consumeProduct(true);
-      }
       return true;
     }
     return false;
