@@ -1,6 +1,8 @@
 2.2.0:
+- Improved: Open button on consume page is now checkbox
 - Improved: Product search on stock overview is now fuzzy search (#486)
 - Fixed: App could show old data when page loading was interrupted (#409)
+- Fixed: Open action now works with quickmode (#500)
 
 2.1.1:
 - New: Support for grocy server 3.2.0
